fix latex formatting

--- a/lesson_15_notebook_part2.ipynb
+++ b/lesson_15_notebook_part2.ipynb
@@ -1289,7 +1289,7 @@
     "\n",
     "> `s1.corr(s2)`\n",
     "\n",
-    "The result is the standard Pearson correlation coefficient, $$r$$.\n",
+    "The result is the standard Pearson correlation coefficient, $r$.\n",
     "\n",
     "More commonly, however, you'll use $r^2$. As I introduced in Lesson #14, $r^2$ represents the proportion of variance in one variable that is explained by the other variable.\n",
     "\n",
@@ -1332,7 +1332,7 @@
     "#\n",
     "# Note that we provide the entire Pandas Series, not just the .values or the .index\n",
     "r = seattle_ann['TMAX'].corr(spokane_ann['TMAX'])\n",
-    "print('The r^2 value is:',r**2)"
+    "print('The r^2 value is:', r**2)"
    ]
   },
   {
