--- a/lesson_15_notebook_part1.ipynb
+++ b/lesson_15_notebook_part1.ipynb
@@ -16,7 +16,7 @@
     "tags": []
    },
    "source": [
-    "## Part 1: `Pandas` - counting, sorting, and grouping data"
+    "## Part 1: `pandas` - counting, sorting, and grouping data"
    ]
   },
   {
