--- a/lesson_15_notebook_part2.ipynb
+++ b/lesson_15_notebook_part2.ipynb
@@ -15,7 +15,7 @@
     "id": "RWAbsEnDUQYo"
    },
    "source": [
-    "## Part 2: `Pandas` - correlating, resampling, and smoothing data"
+    "## Part 2: `pandas` - correlating, resampling, and smoothing data"
    ]
   },
   {
