style changes for readability

--- a/lesson_15_notebook_part2.ipynb
+++ b/lesson_15_notebook_part2.ipynb
@@ -1575,15 +1575,17 @@
    ],
    "source": [
     "# Smooth annual average temperatures using a 5-year running mean\n",
-    "seattle_ann_rm = seattle_ann['TMAX'].rolling(window=5,center=True).mean()\n",
-    "spokane_ann_rm = spokane_ann['TMAX'].rolling(window=5,center=True).mean()\n",
+    "seattle_ann_rm = seattle_ann['TMAX'].rolling(window=5, center=True).mean()\n",
+    "spokane_ann_rm = spokane_ann['TMAX'].rolling(window=5, center=True).mean()\n",
     "\n",
     "# Plot\n",
     "plt.figure(figsize=(18,5))\n",
-    "plt.plot(seattle_ann['TMAX'].index.values,seattle_ann['TMAX'].values,c='k',lw=1,alpha=0.5,label='Seattle (original)')\n",
-    "plt.plot(spokane_ann['TMAX'].index.values,spokane_ann['TMAX'].values,c='b',lw=1,alpha=0.5,label='Spokane (original)')\n",
-    "plt.plot(seattle_ann_rm,c='k',lw=3,label='Seattle (5-year running mean)')\n",
-    "plt.plot(spokane_ann_rm,c='b',lw=3,label='Spokane (5-year running mean)')\n",
+    "plt.plot(seattle_ann['TMAX'].index.values, seattle_ann['TMAX'].values, \n",
+    "         c='k', lw=1, alpha=0.5, label='Seattle (original)')\n",
+    "plt.plot(spokane_ann['TMAX'].index.values, spokane_ann['TMAX'].values,\n",
+    "         c='b', lw=1, alpha=0.5, label='Spokane (original)')\n",
+    "plt.plot(seattle_ann_rm, c='k', lw=3, label='Seattle (5-year running mean)')\n",
+    "plt.plot(spokane_ann_rm, c='b', lw=3, label='Spokane (5-year running mean)')\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "plt.ylabel('Temperature (°F)')\n",
@@ -1627,15 +1629,17 @@
    ],
    "source": [
     "# Smooth high temperature climatologies using a 30-day running mean\n",
-    "seattle_clim_rm = seattle_clim['TMAX'].rolling(window=30,center=True,min_periods=1).mean()\n",
-    "spokane_clim_rm = spokane_clim['TMAX'].rolling(window=30,center=True,min_periods=1).mean()\n",
+    "seattle_clim_rm = seattle_clim['TMAX'].rolling(window=30, center=True, min_periods=1).mean()\n",
+    "spokane_clim_rm = spokane_clim['TMAX'].rolling(window=30, center=True, min_periods=1).mean()\n",
     "\n",
     "# Plot of climatologies\n",
     "plt.figure(figsize=(10,5))\n",
-    "plt.plot(seattle_clim.index,seattle_clim['TMAX'].values,c='k',lw=0.5,alpha=0.8,label='Seattle (original)')\n",
-    "plt.plot(spokane_clim.index,spokane_clim['TMAX'].values,c='b',lw=0.5,alpha=0.8,label='Spokane (original)')\n",
-    "plt.plot(seattle_clim_rm,c='k',lw=2,label='Seattle (30-day running mean)')\n",
-    "plt.plot(spokane_clim_rm,c='b',lw=2,label='Spokane (30-day running mean)')\n",
+    "plt.plot(seattle_clim.index,seattle_clim['TMAX'].values,\n",
+    "         c='k', lw=0.5, alpha=0.8, label='Seattle (original)')\n",
+    "plt.plot(spokane_clim.index,spokane_clim['TMAX'].values,\n",
+    "         c='b', lw=0.5, alpha=0.8, label='Spokane (original)')\n",
+    "plt.plot(seattle_clim_rm, c='k', lw=2, label='Seattle (30-day running mean)')\n",
+    "plt.plot(spokane_clim_rm, c='b', lw=2, label='Spokane (30-day running mean)')\n",
     "plt.grid()\n",
     "plt.legend()\n",
     "plt.xlabel('Day of year')\n",
